#15 [chore] doll -> bear로 단어 수정

--- a/app/src/main/res/layout/fragment_onboarding_bear_selection.xml
+++ b/app/src/main/res/layout/fragment_onboarding_bear_selection.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.sopetit.softie.ui.onboarding.dollselection.DollSelectionViewModel" />
+            type="com.sopetit.softie.ui.onboarding.bearselection.BearSelectionViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,7 +16,7 @@
         android:backgroundTint="@color/background">
 
         <TextView
-            android:id="@+id/tv_doll_selection_question"
+            android:id="@+id/tv_bear_selection_question"
             style="@style/head1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_doll_selection_subtitle"
+            android:id="@+id/tv_bear_selection_subtitle"
             style="@style/body4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,73 +37,73 @@
             android:textColor="@color/gray400"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_doll_selection_question" />
+            app:layout_constraintTop_toBottomOf="@id/tv_bear_selection_question" />
 
         <ImageView
-            android:id="@+id/iv_doll_selection_brown_bear"
+            android:id="@+id/iv_bear_selection_brown_bear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="368dp"
-            android:onClick="@{() -> viewModel.clickBear(1)}"
-            android:src="@{viewModel.selectedDollType == 1 ? @drawable/ic_bear_brown_up: @drawable/ic_bear_brown_down}"
+            android:onClick="@{() -> viewModel.selectBearType(1)}"
+            android:src="@{viewModel.selectedBearType == 1 ? @drawable/ic_bear_brown_up: @drawable/ic_bear_brown_down}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/iv_doll_selection_gray_bear"
+            app:layout_constraintEnd_toStartOf="@id/iv_bear_selection_gray_bear"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
-            android:id="@+id/iv_doll_selection_gray_bear"
+            android:id="@+id/iv_bear_selection_gray_bear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginBottom="368dp"
-            android:onClick="@{() -> viewModel.clickBear(2)}"
-            android:src="@{viewModel.selectedDollType == 2 ? @drawable/ic_bear_gray_up: @drawable/ic_bear_gray_down}"
+            android:onClick="@{() -> viewModel.selectBearType(2)}"
+            android:src="@{viewModel.selectedBearType == 2 ? @drawable/ic_bear_gray_up: @drawable/ic_bear_gray_down}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toEndOf="@id/iv_doll_selection_brown_bear" />
+            app:layout_constraintStart_toEndOf="@id/iv_bear_selection_brown_bear" />
 
         <ImageView
-            android:id="@+id/iv_doll_selection_panda_bear"
+            android:id="@+id/iv_bear_selection_panda_bear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="193dp"
-            android:onClick="@{() -> viewModel.clickBear(3)}"
-            android:src="@{viewModel.selectedDollType == 3 ? @drawable/ic_bear_panda_up: @drawable/ic_bear_panda_down}"
+            android:onClick="@{() -> viewModel.selectBearType(3)}"
+            android:src="@{viewModel.selectedBearType == 3 ? @drawable/ic_bear_panda_up: @drawable/ic_bear_panda_down}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/iv_doll_selection_red_bear"
+            app:layout_constraintEnd_toStartOf="@id/iv_bear_selection_red_bear"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
-            android:id="@+id/iv_doll_selection_red_bear"
+            android:id="@+id/iv_bear_selection_red_bear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginBottom="193dp"
-            android:onClick="@{() -> viewModel.clickBear(4)}"
-            android:src="@{viewModel.selectedDollType == 4 ? @drawable/ic_bear_red_up: @drawable/ic_bear_red_down}"
+            android:onClick="@{() -> viewModel.selectBearType(4)}"
+            android:src="@{viewModel.selectedBearType == 4 ? @drawable/ic_bear_red_up: @drawable/ic_bear_red_down}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toEndOf="@id/iv_doll_selection_panda_bear" />
+            app:layout_constraintStart_toEndOf="@id/iv_bear_selection_panda_bear" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_doll_selection"
+            android:id="@+id/btn_bear_selection"
             android:layout_width="0dp"
             android:layout_height="57dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="34dp"
+            android:background="@{viewModel.selectedBearType != 0 ? @drawable/shape_main1_fill_12_rect : @drawable/shape_gray200_fill_12_rect}"
+            android:clickable="@{viewModel.selectedBearType != 0 ? true : false}"
+            android:enabled="@{viewModel.selectedBearType != 0 ? true : false}"
             android:text="@string/doll_selection_button"
             android:textAppearance="@style/body1"
             android:textColor="@color/gray000"
-            android:background="@{viewModel.selectedDollType != 0 ? @drawable/shape_main1_fill_12_rect : @drawable/shape_gray200_fill_12_rect}"
-            android:enabled="@{viewModel.selectedDollType != 0 ? true : false}"
-            android:clickable="@{viewModel.selectedDollType != 0 ? true : false}"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginBottom="34dp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
