--- a/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
+++ b/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
@@ -76,9 +76,9 @@
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_marginTop="29dp"
-            app:layout_goneMarginStart="14dp"
+            android:layout_marginStart="14dp"
             android:layout_marginEnd="23dp"
-            android:src="@drawable/ic_speech_long"
+            android:background="@drawable/ic_speech_long"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/iv_onboarding_choice_theme_title_bear"
             app:layout_constraintEnd_toEndOf="parent" />
