--- a/app/src/main/res/layout/item_onboarding_choice_routine.xml
+++ b/app/src/main/res/layout/item_onboarding_choice_routine.xml
@@ -15,6 +15,7 @@
         android:paddingHorizontal="20dp"
         android:layout_marginVertical="4dp"
         android:background="@drawable/shape_white_fill_gray000_stroke_99_rect"
+        android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
