--- a/app/src/main/res/layout/fragment_daily_empty.xml
+++ b/app/src/main/res/layout/fragment_daily_empty.xml
@@ -1,100 +1,342 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tv_daily_routine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="661dp"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="18dp"
+        android:layout_marginBottom="661dp"
         android:text="데일리 루틴"
-        android:textAppearance="@style/body1" />
+        android:textAppearance="@style/body1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/iv_daily_empty_first"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/tv_daily_routine"
-        app:layout_constraintBottom_toBottomOf="@id/tv_daily_routine"
-        app:layout_constraintStart_toEndOf="@id/tv_daily_routine"
-        android:layout_marginStart="222dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="20dp"
+        android:text="편집"
         android:textAppearance="@style/body4"
         android:textColor="@color/gray400"
-        android:text="편집" />
+        app:layout_constraintBottom_toBottomOf="@id/tv_daily_routine"
+        app:layout_constraintEnd_toEndOf="@id/iv_daily_empty_first"
+        app:layout_constraintTop_toTopOf="@id/tv_daily_routine" />
 
     <ImageView
         android:id="@+id/iv_daily_empty_first"
         android:layout_width="0dp"
         android:layout_height="136dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginHorizontal="20dp"
-        android:clickable="true"
+        android:layout_marginTop="26dp"
         android:background="@drawable/shape_gray200_line_20_rect"
-        app:layout_constraintTop_toBottomOf="@id/tv_daily_routine"
-        android:layout_marginTop="26dp" />
+        android:clickable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_daily_routine" />
 
     <ImageView
         android:id="@+id/iv_daily_plus_first"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/iv_daily_empty_first"
-        app:layout_constraintStart_toStartOf="@id/iv_daily_empty_first"
-        app:layout_constraintEnd_toEndOf="@id/iv_daily_empty_first"
+        android:src="@drawable/ic_daily_plus"
         app:layout_constraintBottom_toBottomOf="@id/iv_daily_empty_first"
-        android:src="@drawable/ic_daily_plus" />
+        app:layout_constraintEnd_toEndOf="@id/iv_daily_empty_first"
+        app:layout_constraintStart_toStartOf="@id/iv_daily_empty_first"
+        app:layout_constraintTop_toTopOf="@id/iv_daily_empty_first" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_daily_routine_first"
+        android:layout_width="0dp"
+        android:layout_height="136dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="26dp"
+        android:background="@drawable/shape_white_fill_20_rect"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_daily_routine">
+
+        <ImageView
+            android:id="@+id/iv_daily_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_daily"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="22dp" />
+
+        <TextView
+            android:id="@+id/tv_daily_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이불 개기"
+            android:textAppearance="@style/body1"
+            app:layout_constraintStart_toEndOf="@id/iv_daily_icon"
+            app:layout_constraintTop_toTopOf="@id/iv_daily_icon"
+            android:layout_marginStart="12dp" />
+
+        <ImageView
+            android:id="@+id/iv_daily_fin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tv_daily_name"
+            android:layout_marginTop="6dp"
+            app:layout_constraintStart_toStartOf="@id/tv_daily_name"
+            android:src="@drawable/ic_daily_fin" />
+
+        <TextView
+            android:id="@+id/tv_daily_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="n번째 달성 중"
+            android:textAppearance="@style/caption1"
+            android:textColor="@color/gray300"
+            app:layout_constraintTop_toBottomOf="@id/tv_daily_name"
+            android:layout_marginTop="5dp"
+            app:layout_constraintStart_toEndOf="@id/iv_daily_fin"
+            android:layout_marginStart="4dp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_daily_yet_fin"
+            android:layout_width="0dp"
+            android:layout_height="38dp"
+            android:background="@drawable/shape_main1_fill_10_rect"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginHorizontal="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            android:text="완료하기"
+            android:textAppearance="@style/body4"
+            android:textColor="@color/white" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_daily_fin"
+            android:layout_width="0dp"
+            android:layout_height="38dp"
+            android:background="@drawable/shape_gray100_fill_10_rect"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginHorizontal="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            android:text="달성완료"
+            android:textAppearance="@style/body4"
+            android:textColor="@color/gray300" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
         android:id="@+id/iv_daily_empty_second"
         android:layout_width="0dp"
         android:layout_height="136dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginHorizontal="20dp"
-        android:clickable="true"
+        android:layout_marginTop="8dp"
         android:background="@drawable/shape_gray200_line_20_rect"
-        app:layout_constraintTop_toBottomOf="@id/iv_daily_empty_first"
-        android:layout_marginTop="8dp" />
+        android:clickable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_daily_empty_first" />
 
     <ImageView
         android:id="@+id/iv_daily_plus_second"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/iv_daily_empty_second"
-        app:layout_constraintStart_toStartOf="@id/iv_daily_empty_second"
-        app:layout_constraintEnd_toEndOf="@id/iv_daily_empty_second"
+        android:src="@drawable/ic_daily_plus"
         app:layout_constraintBottom_toBottomOf="@id/iv_daily_empty_second"
-        android:src="@drawable/ic_daily_plus" />
+        app:layout_constraintEnd_toEndOf="@id/iv_daily_empty_second"
+        app:layout_constraintStart_toStartOf="@id/iv_daily_empty_second"
+        app:layout_constraintTop_toTopOf="@id/iv_daily_empty_second" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_daily_routine_second"
+        android:layout_width="0dp"
+        android:layout_height="136dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/shape_white_fill_20_rect"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_daily_routine_first">
+
+        <ImageView
+            android:id="@+id/iv_daily_icon_second"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_daily"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="22dp" />
+
+        <TextView
+            android:id="@+id/tv_daily_name_second"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이불 개기"
+            android:textAppearance="@style/body1"
+            app:layout_constraintStart_toEndOf="@id/iv_daily_icon_second"
+            app:layout_constraintTop_toTopOf="@id/iv_daily_icon_second"
+            android:layout_marginStart="12dp" />
+
+        <ImageView
+            android:id="@+id/iv_daily_fin_second"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tv_daily_name_second"
+            android:layout_marginTop="6dp"
+            app:layout_constraintStart_toStartOf="@id/tv_daily_name_second"
+            android:src="@drawable/ic_daily_fin" />
+
+        <TextView
+            android:id="@+id/tv_daily_num_second"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="n번째 달성 중"
+            android:textAppearance="@style/caption1"
+            android:textColor="@color/gray300"
+            app:layout_constraintTop_toBottomOf="@id/tv_daily_name_second"
+            android:layout_marginTop="5dp"
+            app:layout_constraintStart_toEndOf="@id/iv_daily_fin_second"
+            android:layout_marginStart="4dp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_daily_yet_fin_second"
+            android:layout_width="0dp"
+            android:layout_height="38dp"
+            android:background="@drawable/shape_main1_fill_10_rect"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginHorizontal="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            android:text="완료하기"
+            android:textAppearance="@style/body4"
+            android:textColor="@color/white" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_daily_fin_second"
+            android:layout_width="0dp"
+            android:layout_height="38dp"
+            android:background="@drawable/shape_gray100_fill_10_rect"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginHorizontal="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            android:text="달성완료"
+            android:textAppearance="@style/body4"
+            android:textColor="@color/gray300" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
         android:id="@+id/iv_daily_empty_third"
         android:layout_width="0dp"
         android:layout_height="136dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginHorizontal="20dp"
-        android:clickable="true"
+        android:layout_marginTop="8dp"
         android:background="@drawable/shape_gray200_line_20_rect"
-        app:layout_constraintTop_toBottomOf="@id/iv_daily_empty_second"
-        android:layout_marginTop="8dp" />
+        android:clickable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_daily_empty_second" />
 
     <ImageView
         android:id="@+id/iv_daily_plus_third"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/iv_daily_empty_third"
-        app:layout_constraintStart_toStartOf="@id/iv_daily_empty_third"
-        app:layout_constraintEnd_toEndOf="@id/iv_daily_empty_third"
+        android:src="@drawable/ic_daily_plus"
         app:layout_constraintBottom_toBottomOf="@id/iv_daily_empty_third"
-        android:src="@drawable/ic_daily_plus" />
+        app:layout_constraintEnd_toEndOf="@id/iv_daily_empty_third"
+        app:layout_constraintStart_toStartOf="@id/iv_daily_empty_third"
+        app:layout_constraintTop_toTopOf="@id/iv_daily_empty_third" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_daily_routine_third"
+        android:layout_width="0dp"
+        android:layout_height="136dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/shape_white_fill_20_rect"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_daily_routine_second">
+
+        <ImageView
+            android:id="@+id/iv_daily_icon_third"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_daily"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="22dp" />
+
+        <TextView
+            android:id="@+id/tv_daily_name_third"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이불 개기"
+            android:textAppearance="@style/body1"
+            app:layout_constraintStart_toEndOf="@id/iv_daily_icon_third"
+            app:layout_constraintTop_toTopOf="@id/iv_daily_icon_third"
+            android:layout_marginStart="12dp" />
+
+        <ImageView
+            android:id="@+id/iv_daily_fin_third"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tv_daily_name_third"
+            android:layout_marginTop="6dp"
+            app:layout_constraintStart_toStartOf="@id/tv_daily_name_third"
+            android:src="@drawable/ic_daily_fin" />
+
+        <TextView
+            android:id="@+id/tv_daily_num_third"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="n번째 달성 중"
+            android:textAppearance="@style/caption1"
+            android:textColor="@color/gray300"
+            app:layout_constraintTop_toBottomOf="@id/tv_daily_name_third"
+            android:layout_marginTop="5dp"
+            app:layout_constraintStart_toEndOf="@id/iv_daily_fin_third"
+            android:layout_marginStart="4dp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_daily_yet_fin_third"
+            android:layout_width="0dp"
+            android:layout_height="38dp"
+            android:background="@drawable/shape_main1_fill_10_rect"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginHorizontal="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            android:text="완료하기"
+            android:textAppearance="@style/body4"
+            android:textColor="@color/white" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_daily_fin_third"
+            android:layout_width="0dp"
+            android:layout_height="38dp"
+            android:background="@drawable/shape_gray100_fill_10_rect"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginHorizontal="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            android:text="달성완료"
+            android:textAppearance="@style/body4"
+            android:textColor="@color/gray300" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
