#17 [feat] 온보딩 루틴 선택 recyclerview 구현

--- a/app/src/main/res/layout/fragment_onboarding_choice_routine.xml
+++ b/app/src/main/res/layout/fragment_onboarding_choice_routine.xml
@@ -8,6 +8,10 @@
         <variable
             name="viewModel"
             type="com.sopetit.softie.ui.onboarding.OnboardingViewModel" />
+
+        <variable
+            name="routineViewModel"
+            type="com.sopetit.softie.ui.onboarding.routinechoice.RoutineChoiceViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
