--- a/app/src/main/res/layout/fragment_daily_empty.xml
+++ b/app/src/main/res/layout/fragment_daily_empty.xml
@@ -21,8 +21,9 @@
             android:id="@+id/tv_daily_routine"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="24dp"
             android:text="데일리 루틴"
+            android:paddingVertical="16dp"
             android:textAppearance="@style/body1"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="20dp"
@@ -40,13 +41,19 @@
             android:layout_marginEnd="20dp"
             app:layout_constraintTop_toTopOf="@id/tv_daily_routine" />
 
+        <View
+            android:id="@+id/v_blank"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:visibility="@{dailyEmptyViewModel.routineAddList.size() == 0 ? View.VISIBLE : View.GONE}"
+            app:layout_constraintTop_toBottomOf="@id/tv_daily_routine" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_daily_routine_first"
             android:layout_width="0dp"
             android:layout_height="136dp"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/shape_white_fill_20_rect"
             android:visibility="@{dailyEmptyViewModel.routineAddList.size() >= 1 ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
@@ -93,16 +100,6 @@
                 android:textColor="@color/gray300"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_fin"
                 app:layout_constraintTop_toBottomOf="@id/tv_daily_name" />
-
-            <ImageButton
-                android:id="@+id/btn_radio_empty"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/selector_daily_edit"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="21dp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_daily_yet_fin"
@@ -189,16 +186,6 @@
                 app:layout_constraintStart_toEndOf="@id/iv_daily_fin_second"
                 app:layout_constraintTop_toBottomOf="@id/tv_daily_name_second" />
 
-            <ImageButton
-                android:id="@+id/btn_radio_empty_second"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/selector_daily_edit"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="21dp" />
-
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_daily_yet_fin_second"
                 android:layout_width="0dp"
@@ -282,16 +269,6 @@
                 android:textColor="@color/gray300"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_fin_third"
                 app:layout_constraintTop_toBottomOf="@id/tv_daily_name_third" />
-
-            <ImageButton
-                android:id="@+id/btn_radio_empty_third"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/selector_daily_edit"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="21dp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_daily_yet_fin_third"
