[add] string 추출하기

--- a/app/src/main/res/layout/activity_daily_edit.xml
+++ b/app/src/main/res/layout/activity_daily_edit.xml
@@ -24,7 +24,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="24dp"
             android:paddingVertical="16dp"
-            android:text="데일리 루틴"
+            android:text="@string/daily_edit_routine_name"
             android:textAppearance="@style/body1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
-            android:text="취소"
+            android:text="@string/daily_edit_cancel"
             android:textAppearance="@style/body4"
             android:textColor="@color/gray400"
             app:layout_constraintBottom_toBottomOf="@id/tv_daily_routine"
@@ -75,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:text="이불 개기"
+                android:text="@string/daily_routine_user_add"
                 android:textAppearance="@style/body1"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_icon"
                 app:layout_constraintTop_toTopOf="@id/iv_daily_icon" />
@@ -95,7 +95,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="5dp"
-                android:text="n번째 달성 중"
+                android:text="@string/daily_routine_ing"
                 android:textAppearance="@style/caption1"
                 android:textColor="@color/gray300"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_fin"
@@ -118,7 +118,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/shape_main1_fill_10_rect"
-                android:text="완료하기"
+                android:text="@string/daily_routine_fin_btn"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -132,7 +132,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/shape_gray100_fill_10_rect"
-                android:text="달성완료"
+                android:text="@string/daily_routine_fin"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/gray300"
                 android:visibility="invisible"
@@ -170,7 +170,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:text="이불 개기"
+                android:text="@string/daily_routine_user_add"
                 android:textAppearance="@style/body1"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_icon_second"
                 app:layout_constraintTop_toTopOf="@id/iv_daily_icon_second" />
@@ -190,7 +190,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="5dp"
-                android:text="n번째 달성 중"
+                android:text="@string/daily_routine_ing"
                 android:textAppearance="@style/caption1"
                 android:textColor="@color/gray300"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_fin_second"
@@ -213,7 +213,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/shape_main1_fill_10_rect"
-                android:text="완료하기"
+                android:text="@string/daily_routine_fin_btn"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -227,7 +227,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/shape_gray100_fill_10_rect"
-                android:text="달성완료"
+                android:text="@string/daily_routine_fin"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/gray300"
                 android:visibility="invisible"
@@ -264,7 +264,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:text="이불 개기"
+                android:text="@string/daily_routine_user_add"
                 android:textAppearance="@style/body1"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_icon_third"
                 app:layout_constraintTop_toTopOf="@id/iv_daily_icon_third" />
@@ -284,7 +284,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="5dp"
-                android:text="n번째 달성 중"
+                android:text="@string/daily_routine_ing"
                 android:textAppearance="@style/caption1"
                 android:textColor="@color/gray300"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_fin_third"
@@ -307,7 +307,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/shape_main1_fill_10_rect"
-                android:text="완료하기"
+                android:text="@string/daily_routine_fin_btn"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -321,7 +321,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/shape_gray100_fill_10_rect"
-                android:text="달성완료"
+                android:text="@string/daily_routine_fin"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/gray300"
                 android:visibility="invisible"
