--- a/app/src/main/res/layout/fragment_daily_empty.xml
+++ b/app/src/main/res/layout/fragment_daily_empty.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="데일리 루틴"
+            android:text="@string/daily_edit_routine_name"
             android:paddingVertical="16dp"
             android:textAppearance="@style/body1"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
             android:id="@+id/tv_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="편집"
+            android:text="@string/daily_edit"
             android:textAppearance="@style/body4"
             android:textColor="@color/gray400"
             app:layout_constraintBottom_toBottomOf="@id/tv_daily_routine"
@@ -75,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:text="이불 개기"
+                android:text="@string/daily_routine_user_add"
                 android:textAppearance="@style/body1"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_icon"
                 app:layout_constraintTop_toTopOf="@id/iv_daily_icon" />
@@ -95,7 +95,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="5dp"
-                android:text="n번째 달성 중"
+                android:text="@string/daily_routine_ing"
                 android:textAppearance="@style/caption1"
                 android:textColor="@color/gray300"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_fin"
@@ -108,7 +108,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/shape_main1_fill_10_rect"
-                android:text="완료하기"
+                android:text="@string/daily_routine_fin_btn"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -122,7 +122,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/shape_gray100_fill_10_rect"
-                android:text="달성완료"
+                android:text="@string/daily_routine_fin"
                 android:visibility="invisible"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/gray300"
@@ -160,7 +160,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:text="이불 개기"
+                android:text="@string/daily_routine_user_add"
                 android:textAppearance="@style/body1"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_icon_second"
                 app:layout_constraintTop_toTopOf="@id/iv_daily_icon_second" />
@@ -180,7 +180,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="5dp"
-                android:text="n번째 달성 중"
+                android:text="@string/daily_routine_ing"
                 android:textAppearance="@style/caption1"
                 android:textColor="@color/gray300"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_fin_second"
@@ -193,7 +193,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/shape_main1_fill_10_rect"
-                android:text="완료하기"
+                android:text="@string/daily_routine_fin_btn"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -207,7 +207,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/shape_gray100_fill_10_rect"
-                android:text="달성완료"
+                android:text="@string/daily_routine_fin"
                 android:visibility="invisible"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/gray300"
@@ -244,7 +244,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:text="이불 개기"
+                android:text="@string/daily_routine_user_add"
                 android:textAppearance="@style/body1"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_icon_third"
                 app:layout_constraintTop_toTopOf="@id/iv_daily_icon_third" />
@@ -264,7 +264,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="5dp"
-                android:text="n번째 달성 중"
+                android:text="@string/daily_routine_ing"
                 android:textAppearance="@style/caption1"
                 android:textColor="@color/gray300"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_fin_third"
@@ -277,7 +277,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/shape_main1_fill_10_rect"
-                android:text="완료하기"
+                android:text="@string/daily_routine_fin_btn"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -291,7 +291,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/shape_gray100_fill_10_rect"
-                android:text="달성완료"
+                android:text="@string/daily_routine_fin"
                 android:visibility="invisible"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/gray300"
