--- a/app/src/main/res/layout/activity_daily_edit.xml
+++ b/app/src/main/res/layout/activity_daily_edit.xml
@@ -15,7 +15,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
 
         <TextView
             android:id="@+id/tv_daily_routine"
