--- a/app/src/main/res/layout/fragment_setting_init.xml
+++ b/app/src/main/res/layout/fragment_setting_init.xml
@@ -4,6 +4,9 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.sopetit.softie.ui.setting.SettingViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -255,7 +258,7 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
-            android:id="@+id/setting_logout"
+            android:id="@+id/btn_setting_logout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/setting_logout"
@@ -268,7 +271,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/setting_user_exit"
+            android:id="@+id/btn_setting_user_exit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/setting_user_exit"
@@ -276,8 +279,8 @@
             android:textColor="@color/gray300"
             android:paddingVertical="3dp"
             android:layout_marginTop="34dp"
-            app:layout_constraintTop_toBottomOf="@id/setting_logout"
-            app:layout_constraintStart_toStartOf="@id/setting_logout" />
+            app:layout_constraintTop_toBottomOf="@id/btn_setting_logout"
+            app:layout_constraintStart_toStartOf="@id/btn_setting_logout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
