#30 [add] 회원 탈퇴 back btn 적용

--- a/app/src/main/res/layout/fragment_setting_user_exit.xml
+++ b/app/src/main/res/layout/fragment_setting_user_exit.xml
@@ -4,6 +4,10 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.sopetit.softie.ui.setting.SettingViewModel" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
