--- a/app/src/main/res/layout/fragment_onboarding_choice_routine.xml
+++ b/app/src/main/res/layout/fragment_onboarding_choice_routine.xml
@@ -24,7 +24,7 @@
             android:id="@+id/iv_onboarding_choice_routine_title_bear"
             android:layout_width="53dp"
             android:layout_height="50dp"
-            android:src="@drawable/ic_doll_face_1"
+            android:src="@drawable/ic_bear_face_1"
             android:layout_marginTop="34dp"
             android:layout_marginStart="22dp"
             app:layout_constraintTop_toTopOf="parent"
